# ai-dial-adapter-vertexai

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .ort.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  SECURITY.md  app.py  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy_dev.yml  e2e_tests.yml  pr_check_tests.yml  release.yml
aidial_adapter_vertexai/: adapters.py  app.py  chat_completion.py  deployments.py  embeddings.py  vertex_ai.py
aidial_adapter_vertexai/chat/: chat_completion_adapter.py  consumer.py  errors.py  tools.py  truncate_prompt.py
aidial_adapter_vertexai/chat/bison/: adapter.py  base.py  prompt.py  truncate_prompt.py
aidial_adapter_vertexai/chat/gemini/: adapter.py  downloader.py  inputs.py  process_inputs.py  processor.py  processors.py  prompt.py
aidial_adapter_vertexai/chat/gemini/prompt/: base.py  gemini_1_0_pro.py  gemini_1_0_pro_vision.py  gemini_1_5.py  gemini_1_5_flash.py  gemini_1_5_pro.py  gemini_pro_1.py  gemini_pro_vision_1.py
aidial_adapter_vertexai/chat/imagen/: adapter.py
aidial_adapter_vertexai/dial_api/: attachments.py  embedding_inputs.py  exceptions.py  request.py  resource.py  response.py  storage.py  token_usage.py
aidial_adapter_vertexai/embedding/: embeddings_adapter.py  encoding.py  gecko.py  multi_modal.py  text.py  types.py
aidial_adapter_vertexai/embeddings/: embeddings_adapter.py  gecko.py
aidial_adapter_vertexai/llm/: bison_adapter.py  bison_chat.py  bison_chat_completion_adapter.py  bison_history_trimming.py  bison_prompt.py  chat_completion_adapter.py  chat_model_adapter.py  consumer.py  download_image.py  embeddings_adapter.py  exceptions.py  gecko_embeddings.py  gemini_chat_completion_adapter.py  gemini_prompt.py  history_trimming.py  imagen_chat_completion_adapter.py  message.py  process_inputs.py  vertex_ai.py  vertex_ai_adapter.py  vertex_ai_chat.py  vertex_ai_deployments.py
aidial_adapter_vertexai/server/: exceptions.py
aidial_adapter_vertexai/universal_api/: errors.py  request.py  response.py  storage.py  token_usage.py
aidial_adapter_vertexai/utils/: concurrency.py  data_url.py  image_data_url.py  json.py  list.py  log_config.py  not_implemented.py  pdf.py  protobuf.py  resource.py  storage.py  text.py  timer.py
client/: chat.py  chat_client.py  chat_parameters.py  client_adapter.py  client_chat_bison_sdk.py  client_vertexai.py  conf.py  config.py  main.py
client/chat/: adapter.py  base.py  collect_consumer.py  sdk.py  sdk_bison.py
client/utils/: args.py  callback.py  concurrency.py  input.py
llm/: chat_completion_adapter.py
scripts/: docker_entrypoint.sh
server/: exceptions.py
test/: test_chat_completion.py
tests/: conftest.py  server.py  utils.py
tests/integration_tests/: test_chat_completion.py  test_chat_completion_validation.py  test_embeddings.py  test_tokenization.py
tests/locust/: app.py
tests/unit_tests/: conftest.py  test_chat_completion.py  test_embedding_encoding.py  test_endpoints.py  test_history_trimming.py  test_models.py
tests/unit_tests/prompt_truncation/: test_bison.py  test_gemini.py  utils.py
tests/utils/: callback.py  json.py  llm.py  openai.py
utils/: input.py
