[tool.poetry]
name = "aidial-adapter-vertexai"
version = "0.1.0rc"
description = "DIAL adapter for Google Vertex AI"
authors = ["EPAM RAIL <SpecialEPM-DIALDevTeam@epam.com>"]
homepage = "https://epam-rail.com"
documentation = "https://epam-rail.com/dial_api"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ai"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/epam/ai-dial-adapter-vertexai/"

[tool.poetry.dependencies]
python = "~3.11"
aidial-sdk = "0.1.0"
fastapi = "0.97.0"
google-cloud-aiplatform = "1.31.1"
google-auth = "2.21.0"
openai = "0.27.8"
pydantic = "1.10.12"
uvicorn = "0.22.0"

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
pytest-asyncio = "0.21.1"
python-dotenv = "1.0.0"
requests = "2.31.0"
pytest-dotenv = "^0.5.2"

[tool.poetry.group.lint.dependencies]
autoflake = "2.2.0"
black = "23.3.0"
flake8 = "6.0.0"
isort = "5.12.0"
pyright = "1.1.324"

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
colorama = "^0.4.4"
inquirer = "3.1.3"
langchain = "0.0.310"
prompt-toolkit = "3.0.38"
google-auth-oauthlib = "1.0.0"

[tool.pyright]
typeCheckingMode = "basic"
reportUnusedVariable = "error"
reportIncompatibleMethodOverride = "error"
exclude = [
    ".git",
    ".venv",
    ".nox",
    "**/__pycache__"
]

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.venv
  | \.nox
  | \.__pycache__
)/
'''

[tool.isort]
line_length = 80
profile = "black"

[tool.autoflake]
ignore_init_module_imports = true
remove_all_unused_imports = true
in_place = true
recursive = true
quiet = true
exclude = [
    "\\.venv",
    "\\.nox",
]