[tool.poetry]
name = "aidial-adapter-vertexai"
version = "0.10.0rc"
description = "DIAL adapter for Google Vertex AI"
authors = ["EPAM RAIL <SpecialEPM-DIALDevTeam@epam.com>"]
homepage = "https://epam-rail.com"
documentation = "https://epam-rail.com/dial_api"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ai"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/epam/ai-dial-adapter-vertexai/"

[tool.poetry.dependencies]
python = "~3.11"
aidial-sdk = {version = "0.13.0", extras = ["telemetry"]}
fastapi = "0.109.2"
google-cloud-aiplatform = "^1.49.0"
google-auth = "2.21.0"
openai = "1.13.3"
pydantic = "1.10.13"
uvicorn = "0.22.0"
aiocache = "0.12.2"
pillow = "^10.3.0"
pypdf = {version = "^4.2.0", extras = ["crypto"]}
numpy = "^2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
pytest-asyncio = "0.21.1"
python-dotenv = "1.0.0"
requests = "^2.32.2"
pytest-dotenv = "^0.5.2"
pytest-xdist = "^3.5.0"
asgi-lifespan = "^2.1.0"

[tool.poetry.group.lint.dependencies]
autoflake = "2.2.0"
black = "24.3.0"
flake8 = "6.0.0"
isort = "5.12.0"
pyright = "1.1.324"

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
google-auth-oauthlib = "1.0.0"

[tool.pytest.ini_options]
env_override_existing_values = 1
# muting warnings from google.rpc https://github.com/googleapis/google-cloud-python/issues/11184
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning:google.rpc",
]

[tool.pyright]
typeCheckingMode = "basic"
reportUnusedVariable = "error"
reportIncompatibleMethodOverride = "error"
exclude = [
    ".git",
    ".venv",
    ".nox",
    "**/__pycache__",
    "~*"
]

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.venv
  | \.nox
  | \.__pycache__
)/
'''

[tool.isort]
line_length = 80
profile = "black"

[tool.autoflake]
ignore_init_module_imports = true
remove_all_unused_imports = true
in_place = true
recursive = true
quiet = true
exclude = [
    "\\.venv",
    "\\.nox",
]